--- a/qa2_2/pom.xml
+++ b/qa2_2/pom.xml
@@ -21,7 +21,17 @@
         <artifactId>selenium-java</artifactId>
         <version>3.141.59</version>
     </dependency>
-
+    <!-- https://mvnrepository.com/artifact/log4j/log4j -->
+    <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-api</artifactId>
+        <version>2.11.2</version>
+    </dependency>
+    <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-core</artifactId>
+        <version>2.11.2</version>
+    </dependency>
 
 </dependencies>
 
