--- a/qa2_2/pom.xml
+++ b/qa2_2/pom.xml
@@ -46,11 +46,30 @@
         <scope>test</scope>
     </dependency>
     <!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-rest-webmvc -->
-    <dependency>
+    <!--<dependency>
         <groupId>org.springframework.data</groupId>
         <artifactId>spring-data-rest-webmvc</artifactId>
         <version>3.1.8.RELEASE</version>
+    </dependency>-->
+    <!-- https://mvnrepository.com/artifact/org.springframework/spring-web -->
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-web</artifactId>
+        <version>5.1.7.RELEASE</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
+    <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-core</artifactId>
+        <version>2.9.9</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+    <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-databind</artifactId>
+        <version>2.9.9</version>
+    </dependency>
+
 
 
 </dependencies>
